[tool.poetry]
name = "crypto_plus"
version = "0.1.5"
description = "A Easy-to-use Crypto Tool"
readme = "README.md"
authors = ["wmymz <wmymz@icloud.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.7"
cryptography = "^41.0.7"
pycryptodome = "^3.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
ruff = "^0.1.9"
pre-commit = "^3.6.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade,
    "N", # pep8-naming
]
ignore = [
    "E501", # line too long, handled by black
    "E741", # 允许l, i等变量的使用
    "C901", # too complex,
    "UP009", # [*] UTF-8 encoding declaration is unnecessary"
    "B008", # do not perform function calls in argument defaults
    "B023", # Function definition does not bind loop variable
    "UP037", # 兼容低版本python类型注解
    "UP007", # 低版本python不支持 X | Y
]

[tool.ruff.lint.isort]
force-single-line = true
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
