[tool.poetry]
name = "crypto_plus"
version = "0.1.5"
description = "A Easy-to-use Crypto Tool"
readme = "README.md"
authors = ["wmymz <wmymz@icloud.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
#python = ">=3.12"
#cryptography = "^41.0.7"
python = ">=3.6"
cryptography = "^40.0.2"
pycryptodome = "^3.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tox = "^4.11.4"
mkdocs = "^1.5.3"
mkdocs-material = "^8.5.11"
ruff = "^0.1.9"
pre-commit = "^3.6.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade,
    "N", # pep8-naming
]
ignore = [
    "E501", # line too long, handled by black
    "E741", # 允许l, i等变量的使用
    "C901", # too complex,
    "UP009", # [*] UTF-8 encoding declaration is unnecessary"
    "B008", # do not perform function calls in argument defaults
    "B023", # Function definition does not bind loop variable
]

[tool.ruff.lint.isort]
force-single-line = true
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
